--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,13 +1,12 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
 client_id = "517178ca09368baf7bc28742a6ecd043"
-name = "plant-trees"
+name = "Plant Trees"
 application_url = "https://example.com"
 embedded = true
 
 [build]
 automatically_update_urls_on_dev = true
-include_config_on_deploy = true
 
 [webhooks]
 api_version = "2026-01"
