--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@react-router/fs-routes": "^7.9.3",
     "@react-router/node": "^7.9.3",
     "@react-router/serve": "^7.9.3",
+    "@remix-run/node": "^2.17.2",
     "@shopify/app-bridge-react": "^4.2.4",
     "@shopify/polaris-viz": "^16.16.0",
     "@shopify/shopify-app-react-router": "^1.0.0",
